Added Go Quiz 2022-2

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
               <h6>Golang</h6>
             </div>
           </a>
+          <a href="./progconcurrente/tutoriales/Go_2022_2/">
+            <div class="language">
+              <img class="download_img" src="./images/languages_icons/go.png" alt="Descargas">
+              <h6>Go 2022-2</h6>
+            </div>
+          </a>
           <a href="./progconcurrente/tutoriales/Rust/index.html">
             <div class="language">
               <img class="download_img" src="./images/languages_icons/rust.png" alt="Descargas">
