--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -1238,7 +1238,7 @@
 			<h2>Punto Muerto e Interbloqueo</h2>
 
             <p>Se dice que un proceso está en punto muerto si se está esperando un evento que no ocurrirá. 
-				Interbloqueo por lo general implica varios procesos y puede conducir a la terminación del programa. 
+				Un interbloqueo, por lo general, implica varios procesos y puede conducir a la terminación del programa. 
 				El interbloqueo puede ocurrir cuando los procesos se comunican (por ejemplo, dos procesos intentan 
 				enviarse mensajes entre sí simultáneamente y sincrónicamente) pero es un problema más frecuentemente 
 				asociado con Administración de recursos. En este contexto son necesarios cuatro condiciones para que 
