--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -1241,7 +1241,7 @@
 				Un interbloqueo, por lo general, implica varios procesos y puede conducir a la terminación del programa. 
 				El interbloqueo puede ocurrir cuando los procesos se comunican (por ejemplo, dos procesos intentan 
 				enviarse mensajes entre sí de manera simultánea y sincrónica) pero es un problema más frecuentemente 
-				asociado con Administración de recursos. En este contexto son necesarios cuatro condiciones para que 
+				asociado con administración de recursos. En este contexto son necesarios cuatro condiciones para que 
 				exista un interbloqueo:</p>
 
                 <ul>
