--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -1255,7 +1255,7 @@
 					<li>Existe una cadena circular de procesos en la que cada proceso tiene uno o más recursos requeridos por el siguiente proceso en la cadena.</li>
 				  </ul>
 
-				  <p>Las técnicas para evitar o recuperarse de un punto muerto se basan en negar al menos una de estas condiciones. 
+				  <p>Las técnicas para evitar (o recuperarse de) un punto muerto se basan en negar, al menos, una de estas condiciones. 
 					Una de las mejores técnicas (aunque poco prácticas) para evitar interbloqueos es Algoritmo del banquero de Dijkstra. 
 					Dijkstra también planteó lo que se ha convertido en un clásico ejemplo ilustrativo en este campo, el de la Filósofos gastronómicos
 					</p>
