--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -1279,7 +1279,7 @@
 
 			<h2>Errores transitorios</h2>
 
-			<p>En presencia de no determinismo, fallas en un programa concurrente
+			<p>En presencia de no determinismo, las fallas en un programa concurrente
 							pueden aparecer como errores transitorios; es decir, el error puede ocurrir o no
 							dependiendo de la ruta de ejecución tomada en una activación particular del programa. La causa de un error transitorio tiende a ser difícil de identificar porque los eventos que lo preceden a menudo no se conocen precisamente y la fuente del error no puede, en general, ser encontrada por experimentación. Así, una de las habilidades en el diseño de cualquier
 							programa concurrente es la habilidad de expresarlo en una forma que garantiza el comportamiento correcto del programa a pesar de cualquier incertidumbre sobre el orden en que se realizan algunas operaciones individuales. Eso es, no debe haber ninguna parte del programa cuyo comportamiento correcto depende del tiempo.
