--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -1256,7 +1256,7 @@
 				  </ul>
 
 				  <p>Las técnicas para evitar (o recuperarse de) un punto muerto se basan en negar, al menos, una de estas condiciones. 
-					Una de las mejores técnicas (aunque poco prácticas) para evitar interbloqueos es Algoritmo del banquero de Dijkstra. 
+					Una de las mejores técnicas (aunque poco prácticas) para evitar interbloqueos es el algoritmo del banquero de Dijkstra. 
 					Dijkstra también planteó lo que se ha convertido en un clásico ejemplo ilustrativo en este campo, el de la Filósofos gastronómicos
 					</p>
 
