--- a/progconcurrente/concurrente_teoria/index.html
+++ b/progconcurrente/concurrente_teoria/index.html
@@ -1257,7 +1257,7 @@
 
 				  <p>Las técnicas para evitar (o recuperarse de) un punto muerto se basan en negar, al menos, una de estas condiciones. 
 					Una de las mejores técnicas (aunque poco prácticas) para evitar interbloqueos es el algoritmo del banquero de Dijkstra. 
-					Dijkstra también planteó lo que se ha convertido en un clásico ejemplo ilustrativo en este campo, el de la Filósofos gastronómicos
+					Dijkstra también planteó lo que se ha convertido en un clásico ejemplo ilustrativo en este campo: el de los "filósofos gastronómicos".
 					</p>
 
 			<h2>Aplazamiento indefinido (o inanición o cierre patronal)</h2>
