--- a/poa/poa_teoria/Pages/ventajasydesventajas.html
+++ b/poa/poa_teoria/Pages/ventajasydesventajas.html
@@ -160,6 +160,18 @@
 		<p><img src="https://github.com/ProgramacionOrientadaAspectos/POA_teoria/blob/gh-pages/Images/herencia.png?raw=true"
 				alt=""></p>
 				<li>
+					<strong>Dificultades a la hora de hacer debugging:</strong> Debido a que en este paradigma se tiene a ocultar
+					código buscándo la modularización, en el caso de ocurrir un error en nuestra aplicación, puede que no sea fácil
+					identificar si dicho error se originó en el código funcional o en algún aspecto, ya que el flujo real de la
+					ejecución no es explícito y puede ser difícil de seguir
+				</li>
+				<li>
+					<strong>Fragilidad:</strong> Por la forma en que funcionan los cutpoints, cualquier cambio en un advice puede repercutir
+					cambios y posibles errores en múltiples métodos de la aplicación. De la misma manera, cambiar el nombre de un método puede
+					ocasionar que este deje de ser afectado por un advice o que empiece a ser manipulado por otro sin que nos percatemos. Esto
+					exige tener un especial cuidado a la hora de crear y manipular métodos, lo que puede llegar a ser restrictivo.
+				</li>
+				<li>
 					<strong>Documentación:</strong> Como se dijo anteriormente, se trata de un paradigma relativamente nuevo
 					comparado con otros, esto causa que la documentación e implementaciones del mismo no tengan documentaciones
 					robustas como, por ejemplo, la programación orientada a objetos. Esto puede suponer un problema para desarrolladores
