Mejoras escritura desventajas y agregado ejemplo

--- a/poa/poa_teoria/Pages/ejemplos.html
+++ b/poa/poa_teoria/Pages/ejemplos.html
@@ -279,9 +279,32 @@
       Usando before y after_returning_from se puede ejecutar la lógica anteriormente planteada de manera separada y limpia
       como se muestra en la siguiente imagen.
 
-      </p>
+    </p>
 
       <img width="600" height="400" src="../Images/ruby/4.webp?raw=true" hspace="150"> </img>
+
+    <h2>
+      <span aria-hidden="true" class="octicon octicon-link"></span></a>Utilizando decoradores en Python - Ejemplo #1
+    </h2>
+    <p align="justify">
+        A continuación se presenta un ejemplo realizado en Python utilizando decoradores para representar
+        el uso de la programación orientada a aspectos en dicho lenguaje.
+
+        <br>
+        <br>
+
+        En el ejemplo se usa un decorador para implementar una funcion transversal de la aplicación, la cual es
+        verificar que un usuario que quiera realizar cierta operación si sea un usuario valido.
+
+        <br>
+        <br>
+
+        <a href="https://colab.research.google.com/gist/ImGAMP/c1e6496ab6bc0027acb47651a991dc9c/ejemplopythonaop.ipynb">
+        <strong>Has click aqui</strong>
+        </a>
+        para acceder al ejemplo dentro de un notebook de Google Colab.
+        
+    </p>
 
 
 
