--- a/poa/poa_teoria/Pages/filosofia.html
+++ b/poa/poa_teoria/Pages/filosofia.html
@@ -190,6 +190,22 @@
 	de interés, los conceptos que pertenecen a cada dimensión y qué conceptos son afectados por qué unidades.
 </p>
 
+<p align="justify">
+	Las preocupaciones representan comportamientos transversales, en un sistema, que deben ser independientes entre ellas mismas y también a
+	los comportamientos centrales, es posible representarlas mediante un sistema cartesiano multidimensional en donde cada dimensión representa una 
+	preocupación independiente. A continuación, un ejemplo de un sistema con dos preocupaciones, persistencia y auditoría, junto a todos los comportamientos centrales
+	que están representados por la dimensión llamada lógica de negocio:
+</p>
+
+<p align = "center">
+	<img src="../Images/multidimensional_cartesian_system_crosscuttingConcern.png?raw=true" hspace="150"> </img>
+</p>
+
+<p align="justify">
+	Cada dimensión o preocupación es mutualmente independiente y puede evolucionar sin afectar a ninguna otra.
+</p>
+
+
 <h3>
 <a id="msdoc" class="anchor" href="#mdsoc" aria-hidden="true">
 <span aria-hidden="true" class="octicon octicon-link"></span></a>POA y POO
