Crosscutting concern representation was added, an image was also added to represent it.

--- a/poa/poa_teoria/Pages/filosofia.html
+++ b/poa/poa_teoria/Pages/filosofia.html
@@ -190,6 +190,11 @@
 	de interés, los conceptos que pertenecen a cada dimensión y qué conceptos son afectados por qué unidades.
 </p>
 
+<h3>
+	<a id="msdoc" class="anchor" href="#mdsoc" aria-hidden="true">
+	<span aria-hidden="true" class="octicon octicon-link"></span></a>Representación de las preocupaciones
+	</h3>
+
 <p align="justify">
 	Las preocupaciones representan comportamientos transversales, en un sistema, que deben ser independientes entre ellas mismas y también a
 	los comportamientos centrales, es posible representarlas mediante un sistema cartesiano multidimensional en donde cada dimensión representa una 
