Subida referencia al archivo

--- a/poa/poa_teoria/Pages/ejemplos.html
+++ b/poa/poa_teoria/Pages/ejemplos.html
@@ -299,7 +299,7 @@
         <br>
         <br>
 
-        <a href="https://colab.research.google.com/gist/ImGAMP/c1e6496ab6bc0027acb47651a991dc9c/ejemplopythonaop.ipynb">
+        <a href="https://nbviewer.org/github/ferestrepoca/paradigmas-de-programacion/blob/poa-20222-teoria/poa/poa_teoria/ExampleScripts/ejemplopythonaop.ipynb">
         <strong>Has click aqui</strong>
         </a>
         para acceder al ejemplo dentro de un notebook de Google Colab.
