--- a/poa/tutoriales/aspectJ/index.html
+++ b/poa/tutoriales/aspectJ/index.html
@@ -587,7 +587,8 @@ https://templatemo.com/tm-529-ramayana
                     
                     <button class="accordion"><strong>Veterinaria | Verificacion </strong></button>
                     <div class="panel">
-                      Se desea hacer un sistema en el cual se pueda modelar una veterinaria con ciertas funciones donde se puedan pedir citas <br>
+                      Se desea hacer un sistema en el cual se pueda modelar una veterinaria con ciertas funciones donde se puedan pedir citas. <br>
+
                       Todo el código presentado está en el siguiente link: <a href="https://github.com/solotov25/Aspectj.git">Github</a>. <br>
 
                       <b>Main</b>
