Apply suggestions from code review

--- a/poa/poa_teoria/Pages/ejemplos.html
+++ b/poa/poa_teoria/Pages/ejemplos.html
@@ -293,14 +293,14 @@
         <br>
         <br>
 
-        En el ejemplo se usa un decorador para implementar una funcion transversal de la aplicación, la cual es
-        verificar que un usuario que quiera realizar cierta operación si sea un usuario valido.
+        En el ejemplo se usa un decorador para implementar una función transversal de la aplicación, la cual es
+        verificar que un usuario que quiera realizar cierta operación si sea un usuario válido.
 
         <br>
         <br>
 
         <a href="https://nbviewer.org/github/ferestrepoca/paradigmas-de-programacion/blob/poa-20222-teoria/poa/poa_teoria/ExampleScripts/ejemplopythonaop.ipynb">
-        <strong>Has click aqui</strong>
+        <strong>Has click aquí </strong>
         </a>
         para acceder al ejemplo dentro de un notebook de Google Colab.
         
