--- a/poa/poa_teoria/Pages/ventajasydesventajas.html
+++ b/poa/poa_teoria/Pages/ventajasydesventajas.html
@@ -161,7 +161,7 @@
 				alt=""></p>
 				<li>
 					<strong>Dificultades a la hora de hacer debugging:</strong> Debido a que en este paradigma se tiene a ocultar
-					código buscándo la modularización, en el caso de ocurrir un error en nuestra aplicación, puede que no sea fácil
+					código buscando la modularización. En el caso de ocurrir un error en nuestra aplicación, puede que no sea fácil
 					identificar si dicho error se originó en el código funcional o en algún aspecto, ya que el flujo real de la
 					ejecución no es explícito y puede ser difícil de seguir.
 				</li>
@@ -180,7 +180,7 @@
 					<strong>Documentación:</strong> Como se dijo anteriormente, se trata de un paradigma relativamente nuevo
 					comparado con otros, esto causa que la documentación e implementaciones del mismo no tengan documentaciones
 					robustas como, por ejemplo, la programación orientada a objetos. Esto puede suponer un problema para desarrolladores
-					con poca experiencia o para proyectos de gran enbergadura que deban depender en gran medida de este paradigma.
+					con poca experiencia o para proyectos de gran envergadura que deban depender en gran medida de este paradigma.
 				</li>
 		</ul>
 
