--- a/poa/poa_teoria/Pages/ejemplos.html
+++ b/poa/poa_teoria/Pages/ejemplos.html
@@ -293,14 +293,14 @@
         <br>
         <br>
 
-        En el ejemplo se usa un decorador para implementar una función transversal de la aplicación, la cual es
-        verificar que un usuario que quiera realizar cierta operación si sea un usuario válido.
+        En el ejemplo se usa un decorador para implementar una función transversal de la aplicación, la cual consiste en
+        verificar que un usuario que quiera realizar cierta operación sí sea un usuario válido.
 
         <br>
         <br>
 
         <a href="https://nbviewer.org/github/ferestrepoca/paradigmas-de-programacion/blob/gh-pages/poa/poa_teoria/ExampleScripts/ejemplopythonaop.ipynb">
-        <strong>Has click aquí </strong>
+        <strong>Haz click aquí </strong>
         </a>
         para acceder al ejemplo dentro de un notebook de Google Colab.
         
