--- a/poa/poa_teoria/Pages/filosofia.html
+++ b/poa/poa_teoria/Pages/filosofia.html
@@ -196,8 +196,8 @@
 	</h3>
 
 <p align="justify">
-	Las preocupaciones representan comportamientos transversales, en un sistema, que deben ser independientes entre ellas mismas y también a
-	los comportamientos centrales, es posible representarlas mediante un sistema cartesiano multidimensional en donde cada dimensión representa una 
+	Las preocupaciones representan comportamientos transversales en un sistema que deben ser independientes entre ellas mismas y también a
+	los comportamientos centrales. Es posible representarlas mediante un sistema cartesiano multidimensional, en donde cada dimensión representa una
 	preocupación independiente. A continuación, un ejemplo de un sistema con dos preocupaciones, persistencia y auditoría, junto a todos los comportamientos centrales
 	que están representados por la dimensión llamada lógica de negocio:
 </p>
@@ -207,7 +207,7 @@
 </p>
 
 <p align="justify">
-	Cada dimensión o preocupación es mutualmente independiente y puede evolucionar sin afectar a ninguna otra.
+	Cada dimensión o preocupación es mutuamente independiente y puede evolucionar sin afectar a ninguna otra.
 </p>
 
 
