--- a/poa/poa_teoria/Pages/ventajasydesventajas.html
+++ b/poa/poa_teoria/Pages/ventajasydesventajas.html
@@ -160,7 +160,7 @@
 		<p><img src="https://github.com/ProgramacionOrientadaAspectos/POA_teoria/blob/gh-pages/Images/herencia.png?raw=true"
 				alt=""></p>
 				<li>
-					<strong>Dificultades a la hora de hacer debugging:</strong> Debido a que en este paradigma se tiene a ocultar
+					<strong>Dificultades a la hora de hacer debugging:</strong> Debido a que en este paradigma se tiende a ocultar
 					código buscando la modularización. En el caso de ocurrir un error en nuestra aplicación, puede que no sea fácil
 					identificar si dicho error se originó en el código funcional o en algún aspecto, ya que el flujo real de la
 					ejecución no es explícito y puede ser difícil de seguir.
