New characteristics of Logical Programing

--- a/proglogica/logica_teoria/presentaciones.html
+++ b/proglogica/logica_teoria/presentaciones.html
@@ -133,6 +133,7 @@
                         <li><a href="docs/2020-2.pdf">Presentacion periodo 2020-2</a></li>
                         <li><a href="docs/2022-1.pdf">Presentacion periodo 2022-1</a></li>
                         <li><a href="docs/2022-2.pdf">Presentacion periodo 2022-2</a></li>
+                        <li><a href="docs/2023-1.pdf">Presentación periodo 2023-1</a></li>
                     </ol>
                 </div>
             </div>
