--- a/proglogica/logica_teoria/proglogica.html
+++ b/proglogica/logica_teoria/proglogica.html
@@ -173,9 +173,9 @@
 
     <section id="about" style="margin-top:50px;">
       <div class="container">
-        <div class="row about-container">
+        <div class="about-container">
 
-          <div class="col-lg-6 content order-lg-1 order-2">
+          <div class="content order-lg-1 order-2">
             <h3>¿Qué trata de resolver?</h3>
             <p>Dado un problema S, saber si la afirmación A es solución o no del problema o en que casos lo
               es. Además
@@ -185,16 +185,52 @@
             <p><strong>La programación lógica construye base de conocimientos mediante reglas y
                 hechos.</strong></p>
           </div>
-
-          <div class="col-lg-6 content order-lg-1 order-2">
-            <h3>Características del Paradigma</h3>
-            <li>Unificación de términos.</li>
-            <li>Mecanismos de inferencia automática.</li>
-            <li>Recursion como estructura de control básica.</li>
-            <li>Visión lógica de la computación.</li>
-          </div>
         </div>
 
+      </div>
+    </section><!-- #about -->
+
+    <section style="margin-top:50px;">
+      <div class="container">
+        <div class="text_cell_render border-box-sizing rendered_html">
+            <h2>Características del Paradigma</h2>
+            <ul>
+              <li><strong>Basada en la lógica</strong></li>
+              <p>
+                La programación lógica se basa en la lógica matemática, 
+                por lo que se utilizan símbolos lógicos como "and", "or", "not" 
+                para describir las relaciones lógicas entre los hechos y las reglas.
+              </p>
+              <li><strong>Declarativa</strong></li>
+              <p>
+                La programación lógica es un paradigma declarativo, lo que significa que el programador define
+                el resultado deseado, pero no las instrucciones específicas para alcanzarlo. El lenguaje de programación
+                traduce la especificación del problema en una serie de operaciones y algoritmos que se utilizan para obtener
+                el resultado deseado.
+              </p>
+              <li><strong>Basada en reglas</strong></li>
+              <p>
+                En la programación lógica, el programador define las reglas que describen las relaciones lógicas entre los hechos
+                 y los objetos, y luego le solicita al programa que encuentre una solución lógica a un problema en particular.
+              </p>
+              <li><strong>Inferencia</strong></li>
+              <p>
+                La programación lógica se utiliza para la inferencia de datos, que es el proceso de deducir nuevos conocimientos a partir de los datos existentes mediante la aplicación de reglas lógicas.
+              </p>
+              <li><strong>Resolución de problemas</strong></li>
+              <p>
+                La programación lógica se utiliza para la resolución de problemas en áreas como la inteligencia artificial, la representación del conocimiento, la inferencia de datos, la planificación y la resolución de problemas en general.
+              </p>
+              <li><strong>No determinista</strong></li>
+              <p>
+                La programación lógica es no determinista, lo que significa que el orden de las operaciones y las soluciones que se encuentran no están determinadas de antemano. El programa debe buscar entre todas las posibles soluciones para encontrar la más adecuada.
+              </p>
+              <li><strong>Recursiva</strong></li>
+              <p>
+                La programación lógica se basa en la recursividad, lo que significa que una regla puede invocarse a sí misma para resolver un problema de forma repetida hasta que se alcance la solución final.
+              </p>
+            </ul>
+        </div>
       </div>
     </section><!-- #about -->
 
